--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/theme": "^2.4.26",
     "@phosphor-icons/react": "^2.1.10",
     "@tanstack/react-query": "^5.90.21",
+    "framer-motion": "^12.34.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
